2023-12-01 Gabriele Gorla <gorlik@yahoo.com>

	* sdas/asxxsrc/asmain.c:
	  simplify parsing of number radix (similar to upstream asxxxx).
	* src/mos6502/main.c:
	  add ".r56c02" to the assembler output for mos65c02 port.
	  
2023-12-01 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/stm8/gen.c:
	  Port a simplification from f8 to stm8.
	* src/mcs51/main.c:
	  Fix an mcs51 peephole optimizer issue noticed by Oleg Endo.

2023-11-29 Gabriele Gorla <gorlik@yahoo.com>

	* sdas/as6500/r65mch.c:
	  enable 24bit address in sdas for mos6502 (patch #436).
	  
2023-11-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/main.c:
	  Fix handling of jz, jnz in asmLineNodeFromLineNode.

2023-11-28 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Fix bug #3682.

2023-11-28 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/stm8/gen.c:
	  Fix an stm8 codegen bug resulting an omitted carry for some wide subtractions where the least-significant byte of the subtrahend is in a.
	* src/mcs51/peep.c:
	  Fix checking of return values for mcs51 notUsed.

2023-11-28 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/peep.c,
	  src/mcs51/peeph.def:
	  Replace deadMove by notUsed in non-push/pop roles.
	* src/stm8/gen.c:
	  Fix an stm8 rotation codegen issue resulting in invalid asm for --opt-code-speed.

2023-11-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Fix a codegen crash affecting sm83 function calls via pointers to functions returning struct.

2023-11-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Fully enable code speed optimization for z80 (and related).

2023-11-25 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Improve cost function accuracy.

2023-11-25 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/stm8/gen.c,
	  src/z80/gen.c:
	  Shift optimization using information from generalized constant propagation.
