@@ -1,0 +1,3 @@
+.area CODE
+__sdcc_indirect_jsr::
+	jmp	[REGTEMP]
