@@ -1,0 +1,4 @@
+; data pointer used by SDCC for indirect indexed memory access
+
+	.area	ZP (PAG)
+DPTR::	.ds	2
